--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,17 @@ header {
     text-align: center;
     padding: 20px;
 }
-
+nav{
+    width:50%;
+    margin:0 auto;
+}
+nav a{
+    font-size:xx-large;
+    text-decoration:none;
+    padding:1rem;
+    color:white;
+    font-weight:900;
+}
 .photo-profil {
     width: 120px;
     height: 120px;
